samples/_failures_safe/1761599988_4dd7a3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_7d87ab57.c: In function ‘main’:
./samples/SAFE/__tmp_7d87ab57.c:150:13: error: expected declaration or statement at end of input
  150 |             }
      |             ^
./samples/SAFE/__tmp_7d87ab57.c:150:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_7d87ab57.c:150:13: error: expected declaration or statement at end of input
